@@ -24,6 +24,7 @@ NEW CHANGES:
              (+) move systemd-udevd to separate module udev;
         * tests:
              (+) move test-udev to separate module udev;
+             (+) move test-libudev to separate module udev;
         * units:
              (+) add sysctl service;
              (+) remove systemd-sysctl service;
